fix: add spacings to numbered lists

--- a/content/.vitepress/theme/layout/base.css
+++ b/content/.vitepress/theme/layout/base.css
@@ -92,7 +92,8 @@ ol {
   padding-inline-start: 24px;
 }
 
-ul li {
+ul li,
+ol li {
   margin-block: var(--space-xs);
 }
 
